# advent-of-code-2023

./: .gitignore  README.md  clean.ipynb  clean.py  pyproject.toml
aoc_2023/: changelog  core.py
aoc_2023/day01/part2/: solution.py
aoc_2023/day02/part1/: solution.py  test_solution.py
aoc_2023/day02/part2/: solution.py
aoc_2023/day03/part1/: test_solution.py
aoc_2023/day03/part2/: result.txt  solution.py  test_solution.py
aoc_2023/day04/: day4.py  test_day4.py
aoc_2023/day04/part1/: solution.py  test_solution.py
aoc_2023/day04/part2/: solution.py  test_solution.py
aoc_2023/day05/: day5.py  test_day5.py
aoc_2023/day05/part1/: solution.py  solution_d5p1.py  test_solution.py  test_solution_d5p1.py
aoc_2023/day05/part2/: prototype.py  result.txt  solution.py  solution_d5p2.py  test_solution.py  test_solution_d5p2.py
aoc_2023/day06/: day6.py  test_day6.py
aoc_2023/day06/part1/: result.txt  solution_d6p1.py  test_solution.py  test_solution_d6p1.py
aoc_2023/day06/part2/: solution_d6p2.py
aoc_2023/day07/: day7.py  test_day7.py
aoc_2023/day07/part1/: solution7p1.py  test_solution7p1.py
aoc_2023/day07/part2/: solution7p2.py  test_solution7p2.py
aoc_2023/day08/: day8.py
aoc_2023/day08/part1/: solution8p1.py  test_solution8p1.py
aoc_2023/day08/part2/: solution8p2.py  test_solution8p2.py
aoc_2023/day09/: day9.py
aoc_2023/day09/part1/: solution9p1.py  test_solution9p1.py
aoc_2023/day09/part2/: solution9p2.py  test_solution9p2.py
aoc_2023/day1/part1/: solution.py
aoc_2023/day10/part1/: solution10p1.py  test_solution10p1.py
aoc_2023/day11/: day11.py  test_day11.py
aoc_2023/day11/old/part1/: solution11p1.py  test_solution11p1.py
aoc_2023/day11/old/part2/: solution11p2.py  test_solution11p2.py
aoc_2023/day11/part1/: solution11p1.py  test_solution11p1.py
aoc_2023/day11/part2/: solution11p2.py  test_solution11p2.py
aoc_2023/day12/: soln.py  test_day12.py
aoc_2023/day12/part1/: solution12p1.py  test_solution12p1.py
aoc_2023/day2/part2/: solution.py
aoc_2023/day3/part1/: solution.py  test_solution.py
aoc_2023/day3/part2/: solution.py  test_solution.py
aoc_2023/day4/part1/: solution.py  test_solution.py
aoc_2023/day4/part2/: result.txt  solution.py  test_solution.py
aoc_2023/day5/: test_day5.py
aoc_2023/day5/part1/: result.txt  solution.py  test_solution.py
aoc_2023/day5/part2/: solution.py
aoc_2023/template/: template_solution.py  template_test_solution.py
